<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:id="@+id/detailActivityScreen"
    tools:context=".ui.NeighbourDetailsActivity">

    <ImageView
        android:id="@+id/avatar_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_star"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/avatar_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_picture" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:tint="#FFFFFF"
        android:background="@null"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:textColor="#fff"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar_picture"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Monique"

        />

    <RelativeLayout
        android:id="@+id/conteneur1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/avatar_picture"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/prenom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Monique" />


        <TextView
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ic_baseline_call_24"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:paddingBottom="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            tools:text="+33 6 00 00 00 00" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/telephone"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ic_baseline_chat_24"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:paddingBottom="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            tools:text="monique/facebbok" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prenom2"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:paddingBottom="5dp"
            android:textColor="#000"
            android:textSize="17sp"
            tools:text="Paris" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@id/conteneur1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:text="A propos de moi"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTitre"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            tools:text="je suis fort, je suis content......."

            />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>